--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -2790,8 +2790,8 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100vw !important;
+  height: 100vh !important;
   z-index: -1;
 }
 .home__name {
